--- a/.github/workflows/deploynet5.yml
+++ b/.github/workflows/deploynet5.yml
@@ -18,5 +18,14 @@ jobs:
     
     - name: Build
       run: dotnet build  "Net5Crud.Clientes" --configuration Release
+    - name: Publish
+      run: dotnet build  "Net5Crud.Clientes" -c Release -o Api
+    - name: Run Azure appservice Deploy
+      uses: Azure /webapps-deploy@v2
+      with: 
+        appname: webapinet5.azurewebsites.net
+        publish-profile: ${{NET5_DEPLOYMENT_API}}
+        package: ./Api
+      run: dotnet build  "Net5Crud.Clientes" -c Release -o Api   
     - name: Test
       run: dotnet test --no-build --verbosity normal
