--- a/.github/workflows/deploynet5.yml
+++ b/.github/workflows/deploynet5.yml
@@ -21,10 +21,10 @@ jobs:
     - name: Publish
       run: dotnet publish  "Net5Crud.Clientes" -c Release -o Api
     - name: Run Azure appservice Deploy
-      uses: Azure/webapps-deploy@v2
+      uses: azure/webapps-deploy@v2
       with: 
         appname: webapinet5
-        publish-profile: ${{SECRET_DEPLOY}}
+        publish-profile: ${{ secret.SECRET_DEPLOY}}
         package: ./Api
          
     - name: Test
